# django_portfolio

./: .example.env  .gitignore  README.md  docker-compose.yml  pyproject.toml  req.txt  req_dev.txt  requirements.txt  run_dev.sh  run_dev_win.sh  run_django_dev.sh  tox.ini
api/: urls.py  views.py
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20200425_1335.py  0003_auto_20200709_0459.py  0004_cover.py  0005_delete_cover.py
blog/templates/blog/: allblogs.html  blog.html  createblog.html
jobs/: admin.py  forms.py  models.py  selectors.py  services.py  views.py
jobs/fixtures/: cover.json
jobs/migrations/: 0001_initial.py  0002_auto_20200110_1151.py  0003_clientjobs.py  0004_auto_20200709_0508.py  0004_clientjobs_date_time.py  0005_auto_20200709_0545.py  0006_cover.py
jobs/templates/jobs/: about.html  createjob.html  home.html
local_static/static/: home.css  home.js
nalozi/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
nalozi/migrations/: 0001_initial.py  0002_korisnik_avatar.py  0003_remove_korisnik_jobs.py  0004_alter_korisnik_user.py
nalozi/templates/: login.html  logout.html  maintenance_profile.html  profil.html  singup.html
portfolio/: settings.py  test_settings.py  urls.py
portfolio/templates/: base.html
prica/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
prica/migrations/: 0001_initial.py  0002_auto_20200709_0459.py  0003_pricamodel_is_read.py
prica/templates/prica/: home.html  sveprice.html
proxyapp/: admin.py  models.py  views.py
proxyapp/migrations/: 0001_initial.py
proxyapp/templates/proxyapp/: proxy.html
tests/: conftest.py  factories.py  first_tests.py  test_api.py  test_blog.py  test_nalozi.py  test_prica.py
utils/: premissions.py
