[tool.poetry]
name = "django-portfolio"
version = "0.1.0"
description = "My portfolio web site"
authors = ["mile <milemik68@gmail.com>"]
readme = "README.md"
packages = [{include = "django_portfolio"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.17"
gunicorn= "20.1.0"
Pillow = "9.2.0"
psycopg2-binary = "2.9.4"
requests = "2.28.1"

[tool.poetry.group.dev.dependencies]
factory-boy = "3.2.1"
faker = "13.4.0"
ipdb = "0.13.9"
pytest = "7.1.2"
pytest-django = "4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
