[tool.poetry]
name = "django-portfolio"
version = "0.1.0"
description = "My portfolio web site"
authors = ["mile <milemik68@gmail.com>"]
readme = "README.md"
packages = [{include = "django_portfolio"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.24"
gunicorn= "20.1.0"
Pillow = "10.0.1"
psycopg2-binary = "2.9.5"
requests = "2.31.0"

[tool.poetry.group.dev.dependencies]
factory-boy = "3.2.1"
faker = "17.0.0"
ipdb = "0.13.11"
pytest = "7.2.1"
pytest-django = "4.5.2"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
